CosSimilarity TF Calculation